<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#EFEDED"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="20sp"
            android:layout_marginTop="30sp"
            android:textColor="@color/black"
            app:srcCompat="@drawable/baseline_reorder_24" />

        <TextView
            android:id="@+id/post"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="80sp"
            android:layout_marginTop="29sp"
            android:text="Edit Invoice"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="270sp"
            android:layout_marginTop="29sp"
            android:textColor="@color/black"
            app:srcCompat="@drawable/baseline_notifications_none_24" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="313sp"
            android:layout_marginTop="29sp"
            android:textColor="@color/black"
            app:srcCompat="@drawable/baseline_share_24" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="360sp"
            android:layout_marginTop="29sp"
            android:textColor="@color/black"
            app:srcCompat="@drawable/baseline_youtube_searched_for_24" />
    </com.google.android.material.bottomnavigation.BottomNavigationView>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:text="CLIENT"
        android:textSize="20sp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.107"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bottom_navigation"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="AMOUNT"
        android:textSize="20sp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.113"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clientEditText"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="INVOICE DATE"
        android:textSize="20sp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.131"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editAmountText"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="DESCRIPTION"
        android:textSize="20sp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.129"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editInvoiceDate"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="337dp"
        android:layout_height="65dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/black"
        android:text="SAVE"
        app:cornerRadius="0dp"
        android:textSize="24sp"
        android:textColor="@color/white"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/clientEditText"
        android:layout_width="337dp"
        android:layout_height="75dp"
        android:layout_marginTop="20dp"
        android:hint="Enter Client Name"
        android:inputType="text"
        android:textColor="@color/black"
        android:padding="15dp"
        android:textSize="24sp"
        android:background="@drawable/textinputborder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/editAmountText"
        android:layout_width="337dp"
        android:layout_height="75dp"
        android:layout_marginTop="12dp"
        android:hint="Enter amount"
        android:inputType="numberDecimal"
        android:textSize="24sp"
        android:padding="15dp"
        android:textColor="@color/black"
        android:background="@drawable/textinputborder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/editInvoiceDate"
        android:layout_width="337dp"
        android:layout_height="75dp"
        android:layout_marginTop="16dp"
        android:hint="SELECT"
        android:padding="15dp"
        android:background="@drawable/textinputborder"
        android:inputType="date"
        android:textIsSelectable="false"
        android:textSize="24sp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/editDescription"
        android:layout_width="337dp"
        android:layout_height="120dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/textinputborder"
        android:inputType="textPostalAddress"
        android:textSize="24sp"
        android:padding="15dp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        app:layout_constraintVertical_bias="0.25"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/editCalender"
        android:layout_width="33dp"
        android:layout_height="32dp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/editInvoiceDate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.844"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editInvoiceDate"
        app:layout_constraintVertical_bias="0.565"
        app:srcCompat="@drawable/baseline_calendar_today_24" />

</androidx.constraintlayout.widget.ConstraintLayout>